<?xml version="1.0" encoding="utf-8"?>
<!--
    Designed and developed by 2023 nna-dev

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Moodify</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="playback_notification_channel_name">Media playback</string>

    <!-- Common -->
    <string name="common_unknown">Unknown</string>

    <!-- Main activity -->
    <string name="menu_home_title">Home</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_premium_title">Premium</string>

    <!-- Home screen -->
    <string name="screen_home_title">Good evening</string>
    <string name="screen_home_music_filter_chip_title">Music</string>
    <string name="screen_home_podcasts_and_shows_chip_title">Podcasts \&amp; Show</string>

    <!-- Search screen -->
    <string name="screen_search_search_hint">What do you want to listen to?</string>
    <string name="screen_search_browse_all">Browse all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>