<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nna.moodify.ui.home.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/home_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background"
            android:paddingHorizontal="@dimen/margin">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/screen_home_toolbar_margin_top"
                    android:paddingBottom="@dimen/margin_2x">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/screen_home_title"
                        android:textAppearance="@style/TextAppearance.H5.Bold"
                        android:textColor="?attr/colorOnBackground" />

                    <ImageView
                        android:id="@+id/iv_notification"
                        android:layout_width="@dimen/medium_icon_size"
                        android:layout_height="@dimen/medium_icon_size"
                        android:layout_marginHorizontal="@dimen/margin"
                        android:src="@drawable/ic_notifications"
                        app:tint="?attr/colorOnBackground" />

                    <ImageView
                        android:id="@+id/iv_history"
                        android:layout_width="@dimen/medium_icon_size"
                        android:layout_height="@dimen/medium_icon_size"
                        android:layout_marginHorizontal="@dimen/margin"
                        android:src="@drawable/ic_history"
                        app:tint="?attr/colorOnBackground" />

                    <ImageView
                        android:id="@+id/iv_settings"
                        android:layout_width="@dimen/medium_icon_size"
                        android:layout_height="@dimen/medium_icon_size"
                        android:layout_marginStart="@dimen/margin"
                        android:src="@drawable/ic_settings"
                        app:tint="?attr/colorOnBackground" />
                </LinearLayout>


            </com.google.android.material.appbar.MaterialToolbar>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/music_chip"
                    style="@style/Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_home_music_filter_chip_title"
                    android:textColor="?attr/colorOnSurface" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/show_chip"
                    style="@style/Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_home_podcasts_and_shows_chip_title"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.chip.ChipGroup>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.airbnb.epoxy.EpoxyRecyclerView
                    android:id="@+id/recycler_music"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_2x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="10"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_home_large_carousel"
                    tools:orientation="horizontal" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>